P2/confs/apps-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playground-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: playground-pod
  template:
    metadata:
      labels:
        app: playground-pod
    spec:
      containers:
      - name: playground
        image: tutum/hello-world

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-depl
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-world-pod
  template:
    metadata:
      labels:
        app: hello-world-pod
    spec:
      containers:
      - name: hello-world
        image: hello-world

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-seattle-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-seattle-pod
  template:
    metadata:
      labels:
        app: hello-seattle-pod
    spec:
      containers:
      - name: hello-seattle
        image: hello-seattle
